[package]
name = "iris"
version = "0.0.0"
edition = "2024"
description = "Any image format in, VSF-Image out: camera RAW or creative, honestly profiled. The aperture the light passes through."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickspiker/iris"
keywords = ["dng", "raw", "image", "camera", "tiff"]
categories = ["multimedia::images", "encoding"]
# The hero image renders in the README via its raw.githubusercontent URL, no need to ship the bytes in the crate.
exclude = ["iris.webp"]

[dependencies]
bitvec = "1.0"
rawler = "0.7"
